--- a/css/pages.css
+++ b/css/pages.css
@@ -122,31 +122,36 @@ p {
   display: grid;
   grid-template-areas:
                        "weatherBox1 weatherBox2";
+                       grid-template-columns: 40%;
 }
 
 .weatherbox {
-
+  background: #ddd;
+  color: black;
 }
 
 .weatherBox1 {
   grid-area: weatherBox1;
   width: 500px;
-  height: 450px;
+  height: 480px;
   border: 1px solid black;
-  margin-left: 20%;
+  margin-left: 25%;
+  position: relative;
 }
 
 .weatherBox2 {
   grid-area: weatherBox2;
   width: 500px;
-  height: 450px;
-  margin-left: 5%;
+  height: 480px;
+  margin-left: 8%;
   border: 1px solid black;
+  position: relative;
 }
 
 .weatherBoxH3 {
   background: #592B27;
   height: 15%;
+  position: relative;
 }
 
 .weatherH3 {
@@ -162,6 +167,118 @@ p {
 #weatherParagraph {
   margin-left: 10%;
   width: 1200px;
+}
+
+.weatherP:first-of-type {
+  margin-top: 7%;
+  margin-bottom: 0;
+  font-weight: bold;
+}
+
+.weatherP {
+  font-size: 22px;
+  text-transform: uppercase;
+  font-family: 'Open Sans', sans-serif;
+  margin-left: 5%;
+  margin-top: 0;
+  width: 90%;
+}
+
+#currentWind {
+  margin-left: 45%;
+}
+
+.thumbContainer {
+  position: relative;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 20px;
+}
+
+.weatherThumb {
+  width: 90%;
+  margin-left: 5%;
+  margin-top: 5%;
+}
+
+.thumbPhigh {
+  position: absolute;
+  color: white;
+  top: 5%;
+  left: 7%;
+}
+
+.thumbPavg {
+  position: absolute;
+  color: white;
+  top: 14%;
+  left: 7%;
+}
+
+.thumbPlow {
+  position: absolute;
+  color: white;
+  top: 23%;
+  left: 7%;
+}
+
+#high {
+  margin-left: 2px;
+}
+
+#avg {
+  margin-left: 12px;
+}
+
+#low {
+  margin-left: 6px;
+}
+
+#highWind {
+  margin-left: 2px;
+}
+
+#avgWind {
+  margin-left: 12px;
+}
+
+#lowWind {
+  margin-left: 7px;
+}
+
+.tempChoice:first-of-type {
+  position: absolute;
+  left: 22%;
+}
+
+.tempChoice {
+  position: absolute;
+  border: 0;
+  left: 5%;
+  height: 25px;
+  width: 80px;
+  border: none;
+  background: #592B27;
+  color: white;
+  box-shadow: 2px 3px #111;
+  cursor: pointer;
+}
+
+.speedChoice:first-of-type {
+  position: absolute;
+  left: 5%;
+}
+
+.speedChoice {
+  position: absolute;
+  margin-top: 2%;
+  left: 14%;
+  height: 25px;
+  width: 40px;
+  border: none;
+  background: #592B27;
+  color: white;
+  box-shadow: 2px 3px #111;
+  cursor: pointer;
 }
 
 
